[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "japanese-sentence-e2e"
version = "0.1.0"
description = "Headless browser E2E tests for the Japanese sentence practice SPA"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.60.0",
    "pytest>=8.0",
]

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'aarch64'"]

[tool.pytest.ini_options]
testpaths = ["tests/e2e"]
addopts = "-q"
